---------------------------------------------------------------------------------------------------
Version: 3.5.6
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 3.5.5
Date: 2023-07-01
  Bugfixes:
    - Fixed a crash on load when a force is invalidated (#131)
---------------------------------------------------------------------------------------------------
Version: 3.5.4
Date: 2023-06-11
  Bugfixes:
    - Fixed a crash when calling `/rb-print-object` with no parameters (#128)
---------------------------------------------------------------------------------------------------
Version: 3.5.3
Date: 2023-04-29
  Bugfixes:
    - Fixed a crash when migrating from before version 3.0
    - Fixed that characters were not showing as being able to craft recipes
---------------------------------------------------------------------------------------------------
Version: 3.5.2
Date: 2023-01-16
  Optimizations:
    - Massively reduced save loading time with large numbers of modules or fluids (credit to Rseding)
---------------------------------------------------------------------------------------------------
Version: 3.5.1
Date: 2022-12-06
  Changes:
    - Updated to Factorio 1.1.74 and flib 0.12.0
      - Dictionary translations are performed 10x faster in singleplayer
---------------------------------------------------------------------------------------------------
Version: 3.5.0
Date: 2022-10-30
  Features:
    - Added new page contents:
      - Number of module slots will be shown on all entities that support modules (https://todo.sr.ht/~raiguard/factorio-mods/57)
      - [Recipe] Catalyst amounts are shown in ingredient and product tooltips (https://todo.sr.ht/~raiguard/factorio-mods/59)
  Bugfixes:
    - [Burning] Fixed can burn list on entities that have a fluid filter on their energy source
    - [Recipe] Fixed that recipes were counting fluids when testing crafter ingredient limits