@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 3.5.6
 Date: ????
-  Changes:
+  Bugfixes:
+    - [Reverse factory] Fixed that recycling recipes would cause many items to incorrectly show as researched (#133)
 ---------------------------------------------------------------------------------------------------
 Version: 3.5.5
 Date: 2023-07-01
